Fix JDK 17 build